@startuml
left to right direction
skin rose

entity Trabajador {

}

entity Inventario{
    Codigo Instrumento
    Stock intrumento
    Precio
    Instrumento
    Detalles intrumentos
}

entity Sistema {
    codigo intrumento
    stock intrumento
    Boleta

}

entity Cuerda{
    Instrumento
    Tipo de cuerda
    Numero de cuerdas
    Material Construccion
    Tipo
}

entity Percusión{
    Instrumento
    Tipo de Percusión
    Material Construccion
    Altura
}

entity Viento{
    Instrumento
    Material Construccion
}


Trabajador "1..*"-- "1--*" Sistema: Solicita
Sistema "1..*"-- "1..*"Inventario: solicita >
Inventario "1..*"-- "1..*"Cuerda: contiene >
Inventario "1..*"-- "1..*"Percusión: contiene >
Inventario "1..*"-- "1..*"Viento: contiene >

@enduml